--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -21,6 +21,7 @@
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/pwCheck.js"></script>
 
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
