--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -17,6 +17,7 @@
 	<script src="./js/controllers/systemInit.js"></script>
 	<script src="./js/controllers/entering.js"></script>
 	<script src="./js/controllers/login.js"></script>
+	<script src="./js/controllers/initAdmin.js"></script>
 
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
