--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -18,6 +18,7 @@
 	<script src="./js/controllers/entering.js"></script>
 	<script src="./js/controllers/login.js"></script>
 	<script src="./js/controllers/initAdmin.js"></script>
+	<script  src="./js/controllers/rePwd.js"></script>
 
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
