--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -19,6 +19,8 @@
 	<script src="./js/controllers/login.js"></script>
 	<script src="./js/controllers/initAdmin.js"></script>
 	<script  src="./js/controllers/rePwd.js"></script>
+	<script src="./js/controllers/addSiteInfo.js"></script>
+	<script src="./js/controllers/getSiteInfo.js"></script>
 
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
