--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -11,6 +11,7 @@
 	<script src="./lib/angular-messages.min.js"></script>
 	<script src="./lib/angular-animate.min.js"></script>
 	
+	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js"></script>
 	
@@ -26,10 +27,12 @@
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
 	<script src="./js/directives/pwCheck.js"></script>
+	<script src="./js/directives/Bmap.js"></script>
 
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
+
 </head>
 <body ng-app="ljaWebPlatform">
 	<div ng-view></div>
