html中实现保存地址

--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -22,7 +22,8 @@
 	<script  src="./js/controllers/rePwd.js"></script>
 	<script src="./js/controllers/addSiteInfo.js"></script>
 	<script src="./js/controllers/getSiteInfo.js"></script>
-
+    <script src="http://api.map.baidu.com/library/MarkerTool/1.2/src/MarkerTool_min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="http://api.map.baidu.com/library/CityList/1.4/src/CityList_min.js"></script>
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
