--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -29,7 +29,7 @@
 	<script src="./js/directives/login.js"></script>
 	<script src="./js/directives/pwCheck.js"></script>
 	<script src="./js/directives/Bmap.js"></script>
-
+    <script src="./js/directives/getBmap.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
