--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -13,12 +13,16 @@
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js"></script>
 	<script src="./js/controllers/login.js"></script>
+	<script src="./js/controllers/signalcoach.js"></script>
+	<script src="./js/controllers/addMuch.js"></script>
+	<script src="./js/controllers/split.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/muchcoach.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
 </head>
-<body ng-app="ljaWebPlatform">
+<body ng-app="ljaWebDriveSchool">
 	<div ng-view></div>
 	<base href="/">
 </body>
