--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -14,6 +14,7 @@
 	<script src="./js/app.js"></script>
 	<script src="./js/controllers/login.js"></script>
 	<script src="./js/controllers/signalcoach.js"></script>
+	<script src="./js/controllers/stutent.js"></script>
 	<script src="./js/controllers/addMuch.js"></script>
 	<script src="./js/controllers/split.js"></script>
 	<script src="./js/directives/login.js"></script>
