--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -17,6 +17,8 @@
 	<script src="./js/controllers/stutent.js"></script>
 	<script src="./js/controllers/addMuch.js"></script>
 	<script src="./js/controllers/split.js"></script>
+	<script src="./js/controllers/addAllStu.js"></script>
+	<script src="./js/directives/allStudent.js"></script>
 	<script src="./js/directives/login.js"></script>
 	<script src="./js/directives/muchcoach.js"></script>
 	<script src="./js/services/common.js"></script>
