--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -18,7 +18,9 @@
 	<script src="./js/controllers/addMuch.js"></script>
 	<script src="./js/controllers/split.js"></script>
 	<script src="./js/controllers/addAllStu.js"></script>
+	<script src="./js/controllers/coachcars.js"></script>
 	<script src="./js/directives/allStudent.js"></script>
+	<script src="./js/directives/coachcars.js"></script>
 	<script src="./js/directives/login.js"></script>
 	<script src="./js/directives/muchcoach.js"></script>
 	<script src="./js/services/common.js"></script>
