--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -20,6 +20,7 @@
 	<script src="./js/controllers/addAllStu.js"></script>
 	<script src="./js/directives/allStudent.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/errorList.js"></script>
 	<script src="./js/directives/muchcoach.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
