--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -20,8 +20,11 @@
 	<script src="./js/controllers/addAllStu.js"></script>
 	<script src="./js/directives/allStudent.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/newInput.js"></script>
+	<script src="./js/directives/bindCar.js"></script>
 	<script src="./js/directives/errorList.js"></script>
 	<script src="./js/directives/muchcoach.js"></script>
+	<script src="./js/directives/newOnput.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
