--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -17,9 +17,15 @@
 	<script src="./js/controllers/stutent.js"></script>
 	<script src="./js/controllers/addMuch.js"></script>
 	<script src="./js/controllers/split.js"></script>
+	<script src="./js/controllers/good.js"></script>
+	<script src="./js/controllers/getcoach.js"></script>
+	<script src="./js/controllers/getstudent.js"></script>
 	<script src="./js/controllers/addAllStu.js"></script>
 	<script src="./js/directives/allStudent.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/coachTemp.js"></script>
+	<script src="./js/directives/studentTemp.js"></script>
+	<script src="./js/directives/good.js"></script>
 	<script src="./js/directives/newInput.js"></script>
 	<script src="./js/directives/bindCar.js"></script>
 	<script src="./js/directives/errorList.js"></script>
