--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -25,8 +25,8 @@
 	<script src="./js/directives/login.js"></script>
 	<script src="./js/directives/coachTemp.js"></script>
 	<script src="./js/directives/studentTemp.js"></script>
-	<script src="./js/directives/good.js"></script>
 	<script src="./js/directives/newInput.js"></script>
+	<script src="./js/directives/goodItem.js"></script>
 	<script src="./js/directives/bindCar.js"></script>
 	<script src="./js/directives/errorList.js"></script>
 	<script src="./js/directives/muchcoach.js"></script>
