--- a/yi-web-driveschool/index.html
+++ b/yi-web-driveschool/index.html
@@ -18,6 +18,7 @@
 	<script src="./js/controllers/addMuch.js"></script>
 	<script src="./js/controllers/split.js"></script>
 	<script src="./js/controllers/good.js"></script>
+	<script src="./js/controllers/getbad.js"></script>
 	<script src="./js/controllers/getcoach.js"></script>
 	<script src="./js/controllers/getstudent.js"></script>
 	<script src="./js/controllers/addAllStu.js"></script>
@@ -25,6 +26,8 @@
 	<script src="./js/directives/login.js"></script>
 	<script src="./js/directives/coachTemp.js"></script>
 	<script src="./js/directives/studentTemp.js"></script>
+	<script src="./js/directives/forall.js"></script>
+	<script src="./js/directives/badItem.js"></script>
 	<script src="./js/directives/newInput.js"></script>
 	<script src="./js/directives/goodItem.js"></script>
 	<script src="./js/directives/bindCar.js"></script>
