--- a/home-page/index.html
+++ b/home-page/index.html
@@ -13,6 +13,10 @@
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js"></script>
 	<script src="./js/controllers/HomePage.js"></script>
+	<script src="./js/controllers/jobList.js"></script>
+	<script src="./js/directives/navgps.js"></script>
+	<script src="./js/directives/jobList.js"></script>
+	<script src="./js/controllers/test.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
