--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -5,12 +5,13 @@
 	<title>乐驾平台端</title>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap/bootstrap.min.css">
 	<script src="./lib/jquery.min.js"></script>
-	<script src="./lib/ng-file-upload-shim.min.js"></script>
 	<script src="./lib/angular.min.js"></script>
 	<script src="./lib/angular-route.min.js"></script>
 	<script src="./lib/angular-sanitize.min.js"></script>
 	<script src="./lib/angular-messages.min.js"></script>
 	<script src="./lib/angular-animate.min.js"></script>
+	<script src="./lib/ng-file-upload.min.js"></script>
+	<script src="./lib/ng-file-upload-shim.min.js"></script>
 	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js"></script>
@@ -21,10 +22,11 @@
 	<script src="./js/controllers/rePwd.js"></script>
 	<script src="./js/controllers/addSiteInfo.js"></script>
 	<script src="./js/controllers/addjobs.js"></script>
+	<script src="./js/controllers/jobList.js"></script>
 	<script src="./js/controllers/imgUpLoad.js"></script>
 	<script src="./js/controllers/getSiteInfo.js"></script>
 	<script src="./js/directives/basicItem.js"></script>
-	<script src="./lib/ng-file-upload.min.js"></script>
+	<script src="./js/directives/jobList.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
     <script src="./js/directives/upLoad.js"></script>
