--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -23,9 +23,11 @@
 	<script src="./js/controllers/addSiteInfo.js"></script>
 	<script src="./js/controllers/addjobs.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
+	<script src="./js/controllers/jobsList.js"></script>
 	<script src="./js/controllers/getSiteInfo.js"></script>
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/jobList.js"></script>
+	<script src="./js/directives/jobsList.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
     <script src="./js/directives/upLoad.js"></script>
