获取参与者

--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -22,6 +22,7 @@
 	<script src="./js/controllers/rePwd.js"></script>
 	<script src="./js/controllers/addSiteInfo.js"></script>
 	<script src="./js/controllers/addjobs.js"></script>
+	<script src="./js/controllers/testView.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
 	<script src="./js/controllers/jobsList.js"></script>
 	<script src="./js/controllers/getSiteInfo.js"></script>
@@ -33,6 +34,7 @@
     <script src="./js/directives/upLoad.js"></script>
 	<script src="./js/directives/pwCheck.js"></script>
 	<script src="./js/directives/Bmap.js"></script>
+	<script src="./js/directives/testView.js"></script>
     <script src="./js/directives/getBmap.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
