--- a/home-page/index.html
+++ b/home-page/index.html
@@ -11,6 +11,7 @@
 	<script src="./lib/angular-messages.min.js"></script>
 	<script src="./lib/angular-animate.min.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
+	<script src="./lib/angular-contenteditable.js"></script>
 	<script src="./js/app.js"></script>
 	<script src="./js/controllers/HomePage.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
