--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -12,6 +12,7 @@
 	<script src="./lib/angular-animate.min.js"></script>
 	<script src="./lib/ng-file-upload.min.js"></script>
 	<script src="./lib/ng-file-upload-shim.min.js"></script>
+	<script src="./lib/angular-contenteditable.js"></script>
 	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js"></script>
