--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -27,6 +27,7 @@
 	<script src="./js/controllers/addjobs.js"></script>
 	<script src="./js/controllers/platform.js"></script>
 	<script src="./js/controllers/userItem.js"></script>
+	<script src="./js/controllers/fuckQiniu.js"></script>
 	<script src="./js/controllers/getuserByPhone.js"></script>
 	<script src="./js/controllers/testView.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
