--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -28,6 +28,7 @@
 	<script src="./js/controllers/platform.js"></script>
 	<script src="./js/controllers/userItem.js"></script>
 	<script src="./js/controllers/fuckQiniu.js"></script>
+	<script src="./js/controllers/getImUsers.js"></script>
 	<script src="./js/controllers/getuserByPhone.js"></script>
 	<script src="./js/controllers/testView.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
@@ -36,6 +37,7 @@
 	<script src="./js/controllers/getSiteInfo.js"></script>
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/jobList.js"></script>
+	<script src="./js/directives/imuserList.js"></script>
 	<script src="./js/directives/jobsList.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
