--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -31,6 +31,7 @@
 	<script src="./js/controllers/getImUsers.js"></script>
 	<script src="./js/controllers/getuserByPhone.js"></script>
 	<script src="./js/controllers/testView.js"></script>
+	<script src="./js/controllers/examineNew.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
 	<script src="./js/controllers/jobsList.js"></script>
 	<script src="./js/directives/userItem.js"></script>
