--- a/home-page/index.html
+++ b/home-page/index.html
@@ -15,6 +15,7 @@
 	<script src="./js/app.js"></script>
 	<script src="./js/controllers/HomePage.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
+	<script src="./js/controllers/joinus.js"></script>
 	<script src="./js/directives/navgps.js"></script>
 	<script src="./js/directives/jobList.js"></script>
 	<script src="./js/controllers/test.js"></script>
