--- a/yj-web-platform/index.html
+++ b/yj-web-platform/index.html
@@ -31,6 +31,7 @@
 	<script src="./js/controllers/getImUsers.js"></script>
 	<script src="./js/controllers/getuserByPhone.js"></script>
 	<script src="./js/controllers/testView.js"></script>
+	<script src="./js/controllers/addManager.js"></script>
 	<script src="./js/controllers/examineNew.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
 	<script src="./js/directives/schoolList.js"></script>
@@ -38,6 +39,7 @@
 	<script src="./js/directives/userItem.js"></script>
 	<script src="./js/controllers/getSiteInfo.js"></script>
 	<script src="./js/directives/basicItem.js"></script>
+	<script src="./js/directives/getManager.js"></script>
 	<script src="./js/directives/jobList.js"></script>
 	<script src="./js/directives/imuserList.js"></script>
 	<script src="./js/directives/jobsList.js"></script>
