--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<script src="./lib/ng-file-upload-shim.min.js"></script>
 	<script src="./lib/angular-contenteditable.js"></script>
 	<script src="./lib/angular-ui-router.js"></script>
+	<script src="./lib/zoomy.min.js"></script>
+	<script src="./lib/zoomy.js"></script>
 	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js" type="text/javascript"></script>
@@ -52,6 +54,7 @@
     <script src="./js/directives/getBmap.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap/zoomy.css">
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
 
 </head>
