--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script src="./js/controllers/testView.js"></script>
 	<script src="./js/controllers/addManager.js"></script>
 	<script src="./js/controllers/examineNew.js"></script>
+	<script src="./js/controllers/loginOut.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
 	<script src="./js/directives/schoolList.js"></script>
 	<script src="./js/controllers/jobsList.js"></script>
