--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="./lib/ng-file-upload-shim.min.js"></script>
 	<script src="./lib/angular-contenteditable.js"></script>
 	<script src="./lib/angular-ui-router.js"></script>
+	<script src="./lib/alertify.min.js"></script>
 	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js" type="text/javascript"></script>
@@ -53,9 +54,11 @@
     <script src="./js/directives/getBmap.js"></script>
 	<script src="./js/services/common.js"></script>
 	<script src="./js/systemConfig.js"></script>
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap/zoomy.css">
+	<script src="./js/util.js"></script>
 	<link href="./css/bootstrap/platform.css" type="text/css" rel="stylesheet">
-
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap/alertify.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap/default.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap/semantic.min.css">
 </head>
 <body ng-app="ljaWebPlatform">
 	<ui-view></ui-view>
