--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="./lib/angular-contenteditable.js"></script>
 	<script src="./lib/angular-ui-router.js"></script>
 	<script src="./lib/alertify.min.js"></script>
+	<script src="./lib/jquery.rotate.min.js"></script>
 	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
 	<script src="./js/app.js" type="text/javascript"></script>
@@ -45,6 +46,7 @@
 	<script src="./js/directives/jobList.js"></script>
 	<script src="./js/directives/imuserList.js"></script>
 	<script src="./js/directives/jobsList.js"></script>
+	<script src="./js/directives/largeImg.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
     <script src="./js/directives/upLoad.js"></script>
