新加接口调试

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<script src="./js/directives/largeImg.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/studentList.js"></script>
     <script src="./js/directives/upLoad.js"></script>
 	<script src="./js/directives/pwCheck.js"></script>
 	<script src="./js/directives/Bmap.js"></script>
