--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script src="./lib/jquery.rotate.min.js"></script>
 	<script src="./js/BMap.js"></script>
 	<script src="./lib/bootstrap.min.js"></script>
+	<script src="./lib/echarts-all.js"></script>
+	<script src="./lib/moment.js"></script>
 	<script src="./js/app.js" type="text/javascript"></script>
 	<script src="./js/controllers/systemInit.js"></script>
 	<script src="./js/controllers/entering.js"></script>
@@ -44,6 +46,7 @@
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/getManager.js"></script>
 	<script src="./js/directives/jobList.js"></script>
+	<script src="./js/directives/zheXian.js"></script>
 	<script src="./js/directives/imuserList.js"></script>
 	<script src="./js/directives/jobsList.js"></script>
 	<script src="./js/directives/largeImg.js"></script>
