根据教练学员量进行排序

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script src="./js/controllers/examineNew.js"></script>
 	<script src="./js/controllers/loginOut.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
+	<script src="./js/controllers/liveness.js"></script>
 	<script src="./js/directives/schoolList.js"></script>
 	<script src="./js/controllers/jobsList.js"></script>
 	<script src="./js/directives/userItem.js"></script>
@@ -47,6 +48,7 @@
 	<script src="./js/directives/getManager.js"></script>
 	<script src="./js/directives/jobList.js"></script>
 	<script src="./js/directives/zheXian.js"></script>
+	<script src="./js/directives/numberList.js"></script>
 	<script src="./js/directives/imuserList.js"></script>
 	<script src="./js/directives/jobsList.js"></script>
 	<script src="./js/directives/largeImg.js"></script>
