解决搜索用户时出现两个模态框的问题

--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
 	<script src="./js/controllers/liveness.js"></script>
 	<script src="./js/directives/schoolList.js"></script>
 	<script src="./js/controllers/jobsList.js"></script>
+	<script src="./js/controllers/userItemTemp.js"></script>
 	<script src="./js/directives/userItem.js"></script>
 	<script src="./js/controllers/getSiteInfo.js"></script>
 	<script src="./js/directives/basicItem.js"></script>
 	<script src="./js/directives/getManager.js"></script>
+	<script src="./js/directives/nextXian.js"></script>
 	<script src="./js/directives/jobList.js"></script>
+	<script src="./js/directives/useItem.js"></script>
 	<script src="./js/directives/zheXian.js"></script>
 	<script src="./js/directives/numberList.js"></script>
 	<script src="./js/directives/imuserList.js"></script>
