绘制折线图

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<script src="./js/controllers/testView.js"></script>
 	<script src="./js/controllers/addManager.js"></script>
 	<script src="./js/controllers/examineNew.js"></script>
+	<script src="./js/controllers/sumUsers.js"></script>
 	<script src="./js/controllers/loginOut.js"></script>
 	<script src="./js/controllers/jobList.js"></script>
 	<script src="./js/controllers/liveness.js"></script>
@@ -53,10 +54,12 @@
 	<script src="./js/directives/zheXian.js"></script>
 	<script src="./js/directives/numberList.js"></script>
 	<script src="./js/directives/imuserList.js"></script>
+	<script src="./js/directives/anoZhe.js"></script>
 	<script src="./js/directives/jobsList.js"></script>
 	<script src="./js/directives/largeImg.js"></script>
 	<script src="./js/directives/systemInit.js"></script>
 	<script src="./js/directives/login.js"></script>
+	<script src="./js/directives/zhXian.js"></script>
 	<script src="./js/directives/studentList.js"></script>
     <script src="./js/directives/upLoad.js"></script>
 	<script src="./js/directives/pwCheck.js"></script>
