--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<base href="/">
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title>乐驾平台端</title>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap/bootstrap.min.css">
 	<script src="./lib/jquery.min.js" ></script>
@@ -32,9 +32,11 @@
 	<script src="./js/controllers/platform.js"></script>
 	<script src="./js/controllers/userItem.js"></script>
 	<script src="./js/controllers/fuckQiniu.js"></script>
+	<script src="./js/controllers/orderList.js"></script>
 	<script src="./js/controllers/getImUsers.js"></script>
 	<script src="./js/controllers/getuserByPhone.js"></script>
 	<script src="./js/controllers/testView.js"></script>
+	<SCRIPT src="./js/controllers/cashList.js"></SCRIPT>
 	<script src="./js/controllers/addManager.js"></script>
 	<script src="./js/controllers/examineNew.js"></script>
 	<script src="./js/controllers/sumUsers.js"></script>
